# ivac

./: .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
docs/: conf.py  index.rst
docs/reference/: index.rst
src/ivac/: __init__.py  linear.py  nonlinear.py  subspace.py  utils.py
tests/: data.py  ref_corr.py  ref_ivac.py  test_corr.py  test_its.py  test_ivac.py  test_linear.py  test_subspace.py  utils.py
