[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ivac"
version = "0.1.0"
description = "Spectral estimation for Markov processes using the Integrated VAC algorithm."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chatipat Lorpaiboon", email = "chatipat@uchicago.edu" },
]
dependencies = [
    "lightning",
    "matplotlib",
    "numba",
    "numpy",
    "scipy",
    "torch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/chatipat/ivac"
Documentation = "https://ivac.readthedocs.io"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
target-version = ["py311", "py312"]
line-length = 79

[tool.hatch.envs.hatch-test]
extra-args = ["-vv"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.docs]
dependencies = ["sphinx", "sphinx-rtd-theme"]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -E -b html docs dist/docs"
